<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeTables"
            android:icon="@drawable/ic_timetables_black"
            android:title="@string/menu_timeTables" />
        <item
            android:id="@+id/nav_stations"
            android:icon="@drawable/ic_stations_black"
            android:title="@string/menu_stations" />
        <item
            android:id="@+id/nav_trains"
            android:icon="@drawable/ic_trains_black"
            android:title="@string/menu_trains" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/ic_alarms_black"
            android:title="@string/menu_alarms" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
