<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="720dp"
        tools:context=".CreateTimeTable">

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@color/buttonColor"
            android:text="@string/deleteBtn"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editBtn" />

        <TextView
            android:id="@+id/arrivalTimeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/arrivalLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swap" />

        <Button
            android:id="@+id/arrivalTimeBtn"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:background="@color/buttonColor"
            android:text="@string/arrivalBtn"
            android:textColor="#FFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/arrivalTimeTxt"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/swap"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="282dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@color/buttonColor"
            android:foreground="@drawable/ic_swap_horiz_white"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endStation" />

        <Spinner
            android:id="@+id/endStation"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:contextClickable="false"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startStation" />

        <Spinner
            android:id="@+id/trainType"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:contextClickable="false"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateBtn" />

        <Spinner
            android:id="@+id/startStation"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:contextClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routeName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="81dp"
            android:text="@string/nameLabel"
            app:layout_constraintEnd_toStartOf="@+id/routeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/routeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/hint_enterRouteName"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.669"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/departTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="127dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="40dp"
            android:text="@string/departLabel"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/departTimeBtn"
            app:layout_constraintTop_toBottomOf="@+id/arrivalTimeTxt" />

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:text="@string/dateLabel"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateBtn"
            app:layout_constraintTop_toBottomOf="@+id/departTxt" />

        <Button
            android:id="@+id/departTimeBtn"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:background="@color/buttonColor"
            android:text="@string/departBtn"
            android:textColor="#FFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrivalTimeBtn" />

        <Button
            android:id="@+id/dateBtn"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:background="@color/buttonColor"
            android:text="@string/dateBtn"
            android:textColor="#FFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/departTimeBtn" />

        <Button
            android:id="@+id/editBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="40dp"
            android:background="@color/buttonColor"
            android:text="@string/editBtn"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainType" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>