<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="720dp"
        tools:context=".SearchTimeTable">


        <EditText
            android:id="@+id/in_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:clickable="false"
            android:hint="@string/hint_selectDate"
            android:textAlignment="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_date" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignBottom="@+id/in_date"
            android:layout_marginStart="40dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:background="@color/buttonColor"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:text="@string/selectDateBtn"
            android:textColor="#FFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Spinner
            android:id="@+id/endStation"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:contextClickable="false"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startStation" />

        <Spinner
            android:id="@+id/startStation"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:contextClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/swapBtn"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@color/buttonColor"
            android:foreground="@drawable/ic_swap_horiz_white"
            android:foregroundGravity="center"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endStation" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@color/lightgrey"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swapBtn">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dailySchedule"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginTop="5dp"
                android:text="@string/nextTrainLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/nextTrainSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/dailyTrainSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nextTrainSwitch" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/timeTableSearchBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="100dp"
            android:background="@color/buttonColor"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:text="@string/searchBtn"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeFilterGroup" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/timeFilterLabel"
            app:layout_constraintBaseline_toBaselineOf="@+id/timeFilterCheck"
            app:layout_constraintStart_toEndOf="@+id/timeFilterCheck" />

        <Switch
            android:id="@+id/timeFilterCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_date" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timeFilterGroup"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="40dp"
            android:background="@color/lightgrey"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeFilterCheck">


            <Button
                android:id="@+id/startTime"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:background="@color/buttonColor"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:text="@string/startTimeBtn"
                android:textColor="#FFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/endTime"
                android:layout_width="110dp"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:background="@color/buttonColor"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:text="@string/endTimeBtn"
                android:textColor="#FFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startTime" />

            <TextView
                android:id="@+id/endTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endTimeLabel"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/endTime"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/startTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startTimeLabel"
                android:textAlignment="viewEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/startTime"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>